--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,30 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family:Aboreto;
+  src: url(../public/assets/fonts/Aboreto.ttf);
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.wrapper {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+body {
+  font-family: Aboreto;
+}
